[gd_scene load_steps=15 format=2]

[ext_resource path="res://Menus/Help/HelpMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Resources/Title-Menus.png" type="Texture" id=2]
[ext_resource path="res://Menus/Resources/Button-Normal.png" type="Texture" id=3]
[ext_resource path="res://Menus/Resources/Button-Hover.png" type="Texture" id=4]
[ext_resource path="res://Menus/Font (immortal).ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Menus/Resources/Buttons-Icons.png" type="Texture" id=6]
[ext_resource path="res://Menus/Help/RuneHelp-01.png" type="Texture" id=7]
[ext_resource path="res://Menus/Help/RuneHelp-02.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 150, 400, 150 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="DynamicFont" id=5]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 5 )

[node name="HelpMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TitleHelp" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -301.0
margin_top = 50.0
margin_right = 301.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
rect_pivot_offset = Vector2( 200, 75 )
texture = SubResource( 1 )
expand = true
stretch_mode = 4

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -535.0
margin_top = -72.0
margin_right = 535.0
margin_bottom = 178.0
custom_constants/separation = 250
alignment = 1

[node name="ControlsButton" type="TextureButton" parent="Buttons"]
margin_left = 192.0
margin_right = 410.0
margin_bottom = 250.0
rect_min_size = Vector2( 218, 250 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Buttons/ControlsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = -40.5
margin_right = 128.5
margin_bottom = 40.5
custom_fonts/font = SubResource( 2 )
text = "Controls"
align = 1
valign = 1

[node name="RunesButton" type="TextureButton" parent="Buttons"]
margin_left = 660.0
margin_right = 878.0
margin_bottom = 250.0
rect_min_size = Vector2( 218, 250 )
rect_pivot_offset = Vector2( 88, 0 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Buttons/RunesButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = -40.5
margin_right = 128.5
margin_bottom = 40.5
custom_fonts/font = SubResource( 2 )
text = "Runes"
align = 1
valign = 1

[node name="BackButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -116.0
margin_right = 50.0
margin_bottom = -16.0
texture_normal = SubResource( 3 )
texture_hover = SubResource( 4 )

[node name="ControlsLabel" type="HBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.5
margin_top = -140.0
margin_right = 286.5
margin_bottom = 228.0
custom_constants/separation = 75

[node name="Titles" type="Label" parent="ControlsLabel"]
margin_top = 7.0
margin_right = 228.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 5 )
text = "Move
Jump
Shoot
Shoot Up
Runes Menu
Pause
Exit"
align = 2
valign = 1

[node name="Keys" type="Label" parent="ControlsLabel"]
margin_left = 303.0
margin_top = 7.0
margin_right = 549.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 5 )
text = "AD - Arrows
Space
J
J + W
K
P
Esc"
valign = 1

[node name="RunesLabel" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -200.0
margin_right = 540.0
margin_bottom = 200.0
rect_min_size = Vector2( 1080, 400 )
rect_pivot_offset = Vector2( 0, 200 )

[node name="HBoxContainer" type="HBoxContainer" parent="RunesLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -141.0
margin_right = 310.0
margin_bottom = -79.0
custom_constants/separation = 80
alignment = 1

[node name="Permanents" type="Label" parent="RunesLabel/HBoxContainer"]
margin_right = 274.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 6 )
text = "Permanents"
align = 2
valign = 1

[node name="Temporary" type="Label" parent="RunesLabel/HBoxContainer"]
margin_left = 354.0
margin_right = 620.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 6 )
text = "Temporary"
align = 2
valign = 1

[node name="Runes" type="HBoxContainer" parent="RunesLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.5
margin_top = -43.0
margin_right = 338.5
margin_bottom = 209.0
custom_constants/separation = 80
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RunesLabel/Runes"]
margin_right = 262.0
margin_bottom = 252.0
alignment = 1

[node name="Titles" type="Label" parent="RunesLabel/Runes/HBoxContainer"]
margin_right = 158.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 5 )
text = "Slow
Poison
Paralyze
Invoke
Fly"
align = 2
valign = 1

[node name="Runes" type="TextureRect" parent="RunesLabel/Runes/HBoxContainer"]
margin_left = 162.0
margin_right = 262.0
margin_bottom = 252.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="RunesLabel/Runes"]
margin_left = 342.0
margin_right = 677.0
margin_bottom = 252.0
alignment = 1

[node name="Titles2" type="Label" parent="RunesLabel/Runes/HBoxContainer2"]
margin_top = 51.0
margin_right = 231.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 5 )
text = "Damage
Shield
Regeneration"
align = 2
valign = 1

[node name="Runes2" type="TextureRect" parent="RunesLabel/Runes/HBoxContainer2"]
margin_left = 235.0
margin_right = 335.0
margin_bottom = 252.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 4

[connection signal="visibility_changed" from="." to="." method="_on_HelpMenu_visibility_changed"]
[connection signal="pressed" from="Buttons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Buttons/RunesButton" to="." method="_on_RunesButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
